# Kurs_05_API_HH

./: README.md  database.ini  main.py  pyproject.toml
src/: abc_api.py  config.py  db_manager.py  db_saver.py  hh_api.py  utils.py
